--- a/index.html
+++ b/index.html
@@ -147,6 +147,30 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd18-United-States-Grand-Prix-Qualifying_laptime.csv">QF:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd18-United-States-Grand-Prix-Sprint-Shootout.pdf">SS:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd18-United-States-Grand-Prix-Sprint-Shootout_rcm.csv">SS:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd18-United-States-Grand-Prix-Sprint-Shootout_laptime.csv">SS:All
+Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd18-United-States-Grand-Prix_Telemetry_overlay.pdf">Telemetry
+Overlay</a></p>
+<p><a
+href="./2023/2023-Rd18-United-States-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd18-United-States-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a
+href="./2023/2023-Rd18-United-States-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a
+href="./2023/2023-Rd18-United-States-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd17-qatar-grand-prix"><span
 class="header-section-number">1.2</span> Rd17 Qatar Grand Prix</h2>
 <p><a href="./2023/2023-Rd17-Qatar-Grand-Prix-Practice-1.pdf">FP1:Plots
