--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@ CSV </a><br />
 <a
 href="./2023/2023-Rd18-United-States-Grand-Prix-Sprint_rcm.csv">S:Race
 Control Message CSV</a></p>
+<p><a href="./2023/2023-Rd18-United-States-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd18-United-States-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a
+href="./2023/2023-Rd18-United-States-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2023/2023-Rd18-United-States-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd17-qatar-grand-prix"><span
 class="header-section-number">1.2</span> Rd17 Qatar Grand Prix</h2>
 <p><a href="./2023/2023-Rd17-Qatar-Grand-Prix-Practice-1.pdf">FP1:Plots
