Add 2023 Rd19 MexicoCity GP FP3 & QF

--- a/index.html
+++ b/index.html
@@ -151,6 +151,24 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-2_laptime.csv">FP2:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-3.pdf">FP3:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-3_rcm.csv">FP3:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-3_laptime.csv">FP3:All
+Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Qualifying.pdf">QF:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Qualifying_rcm.csv">QF:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Qualifying_laptime.csv">QF:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd18-united-states-grand-prix"><span
 class="header-section-number">1.2</span> Rd18 United States Grand
 Prix</h2>
