Add 2023 Rd19 MexicoCity GP Telemetry Overlay

--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Qualifying_laptime.csv">QF:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd19-Mexico-City-Grand-Prix_Telemetry_overlay.pdf">Telemetry
+Overlay</a></p>
 <h2 data-number="1.2" id="rd18-united-states-grand-prix"><span
 class="header-section-number">1.2</span> Rd18 United States Grand
 Prix</h2>
