Add 2023 Rd19 MexicoCity GP Race

--- a/index.html
+++ b/index.html
@@ -172,6 +172,15 @@ Laptime CSV</a></p>
 <p><a
 href="./2023/2023-Rd19-Mexico-City-Grand-Prix_Telemetry_overlay.pdf">Telemetry
 Overlay</a></p>
+<p><a href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a
+href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd18-united-states-grand-prix"><span
 class="header-section-number">1.2</span> Rd18 United States Grand
 Prix</h2>
