--- a/index.html
+++ b/index.html
@@ -36,71 +36,75 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2023 season</a>
 <ul>
+<li><a href="#rd20-sao-paulo-grand-prix"
+id="toc-rd20-sao-paulo-grand-prix"><span
+class="toc-section-number">1.1</span> Rd20 Sao Paulo Grand Prix</a></li>
 <li><a href="#rd19-mexico-city-grand-prix"
 id="toc-rd19-mexico-city-grand-prix"><span
-class="toc-section-number">1.1</span> Rd19 Mexico City Grand
+class="toc-section-number">1.2</span> Rd19 Mexico City Grand
 Prix</a></li>
 <li><a href="#rd18-united-states-grand-prix"
 id="toc-rd18-united-states-grand-prix"><span
-class="toc-section-number">1.2</span> Rd18 United States Grand
+class="toc-section-number">1.3</span> Rd18 United States Grand
 Prix</a></li>
 <li><a href="#rd17-qatar-grand-prix"
 id="toc-rd17-qatar-grand-prix"><span
-class="toc-section-number">1.3</span> Rd17 Qatar Grand Prix</a></li>
+class="toc-section-number">1.4</span> Rd17 Qatar Grand Prix</a></li>
 <li><a href="#rd16-japanese-grand-prix"
 id="toc-rd16-japanese-grand-prix"><span
-class="toc-section-number">1.4</span> Rd16 Japanese Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd16 Japanese Grand Prix</a></li>
 <li><a href="#rd15-singapore-grand-prix"
 id="toc-rd15-singapore-grand-prix"><span
-class="toc-section-number">1.5</span> Rd15 Singapore Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd15 Singapore Grand Prix</a></li>
 <li><a href="#rd14-italian-grand-prix"
 id="toc-rd14-italian-grand-prix"><span
-class="toc-section-number">1.6</span> Rd14 Italian Grand Prix</a></li>
+class="toc-section-number">1.7</span> Rd14 Italian Grand Prix</a></li>
 <li><a href="#rd13-dutch-grand-prix"
 id="toc-rd13-dutch-grand-prix"><span
-class="toc-section-number">1.7</span> Rd13 Dutch Grand Prix</a></li>
+class="toc-section-number">1.8</span> Rd13 Dutch Grand Prix</a></li>
 <li><a href="#rd12-belgian-grand-prix"
 id="toc-rd12-belgian-grand-prix"><span
-class="toc-section-number">1.8</span> Rd12 Belgian Grand Prix</a></li>
+class="toc-section-number">1.9</span> Rd12 Belgian Grand Prix</a></li>
 <li><a href="#rd11-hungarian-grand-prix"
 id="toc-rd11-hungarian-grand-prix"><span
-class="toc-section-number">1.9</span> Rd11 Hungarian Grand Prix</a></li>
+class="toc-section-number">1.10</span> Rd11 Hungarian Grand
+Prix</a></li>
 <li><a href="#rd10-british-grand-prix"
 id="toc-rd10-british-grand-prix"><span
-class="toc-section-number">1.10</span> Rd10 British Grand Prix</a></li>
+class="toc-section-number">1.11</span> Rd10 British Grand Prix</a></li>
 <li><a href="#rd09-austrian-grand-prix"
 id="toc-rd09-austrian-grand-prix"><span
-class="toc-section-number">1.11</span> Rd09 Austrian Grand Prix</a></li>
+class="toc-section-number">1.12</span> Rd09 Austrian Grand Prix</a></li>
 <li><a href="#rd08-canadian-grand-prix"
 id="toc-rd08-canadian-grand-prix"><span
-class="toc-section-number">1.12</span> Rd08 Canadian Grand Prix</a></li>
+class="toc-section-number">1.13</span> Rd08 Canadian Grand Prix</a></li>
 <li><a href="#rd07-spanish-grand-prix"
 id="toc-rd07-spanish-grand-prix"><span
-class="toc-section-number">1.13</span> Rd07 Spanish Grand Prix</a></li>
+class="toc-section-number">1.14</span> Rd07 Spanish Grand Prix</a></li>
 <li><a href="#rd06-monaco-grand-prix"
 id="toc-rd06-monaco-grand-prix"><span
-class="toc-section-number">1.14</span> Rd06 Monaco Grand Prix</a></li>
+class="toc-section-number">1.15</span> Rd06 Monaco Grand Prix</a></li>
 <li><a href="#rd05-miami-grand-prix"
 id="toc-rd05-miami-grand-prix"><span
-class="toc-section-number">1.15</span> Rd05 Miami Grand Prix</a></li>
+class="toc-section-number">1.16</span> Rd05 Miami Grand Prix</a></li>
 <li><a href="#rd04-azerbaijan-grand-prix"
 id="toc-rd04-azerbaijan-grand-prix"><span
-class="toc-section-number">1.16</span> Rd04 Azerbaijan Grand
+class="toc-section-number">1.17</span> Rd04 Azerbaijan Grand
 Prix</a></li>
 <li><a href="#rd03-australian-grand-prix"
 id="toc-rd03-australian-grand-prix"><span
-class="toc-section-number">1.17</span> Rd03 Australian Grand
+class="toc-section-number">1.18</span> Rd03 Australian Grand
 Prix</a></li>
 <li><a href="#rd02-saudi-arabian-grand-prix"
 id="toc-rd02-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.18</span> Rd02 Saudi Arabian Grand
+class="toc-section-number">1.19</span> Rd02 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd01-bahrain-grand-prix"
 id="toc-rd01-bahrain-grand-prix"><span
-class="toc-section-number">1.19</span> Rd01 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.20</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test-week1"
 id="toc-pre-season-test-week1"><span
-class="toc-section-number">1.20</span> Pre-Season Test Week1</a></li>
+class="toc-section-number">1.21</span> Pre-Season Test Week1</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2022 season</a>
@@ -130,8 +134,19 @@ class="toc-section-number">2.6</span> Rd17 Singapore Grand Prix</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2023 season</h1>
-<h2 data-number="1.1" id="rd19-mexico-city-grand-prix"><span
-class="header-section-number">1.1</span> Rd19 Mexico City Grand
+<h2 data-number="1.1" id="rd20-sao-paulo-grand-prix"><span
+class="header-section-number">1.1</span> Rd20 Sao Paulo Grand Prix</h2>
+<p><a
+href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Practice-1.pdf">FP1:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Practice-1_rcm.csv">FP1:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Practice-1_laptime.csv">FP1:All
+Laptime CSV</a></p>
+<h2 data-number="1.2" id="rd19-mexico-city-grand-prix"><span
+class="header-section-number">1.2</span> Rd19 Mexico City Grand
 Prix</h2>
 <p><a
 href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-1.pdf">FP1:Plots
@@ -181,8 +196,8 @@ href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.2" id="rd18-united-states-grand-prix"><span
-class="header-section-number">1.2</span> Rd18 United States Grand
+<h2 data-number="1.3" id="rd18-united-states-grand-prix"><span
+class="header-section-number">1.3</span> Rd18 United States Grand
 Prix</h2>
 <p><a
 href="./2023/2023-Rd18-United-States-Grand-Prix-Practice-1.pdf">FP1:Plots
@@ -236,8 +251,8 @@ href="./2023/2023-Rd18-United-States-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd18-United-States-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.3" id="rd17-qatar-grand-prix"><span
-class="header-section-number">1.3</span> Rd17 Qatar Grand Prix</h2>
+<h2 data-number="1.4" id="rd17-qatar-grand-prix"><span
+class="header-section-number">1.4</span> Rd17 Qatar Grand Prix</h2>
 <p><a href="./2023/2023-Rd17-Qatar-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd17-Qatar-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -268,8 +283,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd17-Qatar-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.4" id="rd16-japanese-grand-prix"><span
-class="header-section-number">1.4</span> Rd16 Japanese Grand Prix</h2>
+<h2 data-number="1.5" id="rd16-japanese-grand-prix"><span
+class="header-section-number">1.5</span> Rd16 Japanese Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd16-Japanese-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -315,8 +330,8 @@ href="./2023/2023-Rd16-Japanese-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd16-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.5" id="rd15-singapore-grand-prix"><span
-class="header-section-number">1.5</span> Rd15 Singapore Grand Prix</h2>
+<h2 data-number="1.6" id="rd15-singapore-grand-prix"><span
+class="header-section-number">1.6</span> Rd15 Singapore Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd15-Singapore-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -362,8 +377,8 @@ href="./2023/2023-Rd15-Singapore-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd15-Singapore-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.6" id="rd14-italian-grand-prix"><span
-class="header-section-number">1.6</span> Rd14 Italian Grand Prix</h2>
+<h2 data-number="1.7" id="rd14-italian-grand-prix"><span
+class="header-section-number">1.7</span> Rd14 Italian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd14-Italian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -406,8 +421,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd14-Italian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.7" id="rd13-dutch-grand-prix"><span
-class="header-section-number">1.7</span> Rd13 Dutch Grand Prix</h2>
+<h2 data-number="1.8" id="rd13-dutch-grand-prix"><span
+class="header-section-number">1.8</span> Rd13 Dutch Grand Prix</h2>
 <p><a href="./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -444,8 +459,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd13-Dutch-Grand-Prix-Race_rcm.csv">R: Race Control
 Message CSV</a></p>
-<h2 data-number="1.8" id="rd12-belgian-grand-prix"><span
-class="header-section-number">1.8</span> Rd12 Belgian Grand Prix</h2>
+<h2 data-number="1.9" id="rd12-belgian-grand-prix"><span
+class="header-section-number">1.9</span> Rd12 Belgian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd12-Belgian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -488,8 +503,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd12-Belgian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.9" id="rd11-hungarian-grand-prix"><span
-class="header-section-number">1.9</span> Rd11 Hungarian Grand Prix</h2>
+<h2 data-number="1.10" id="rd11-hungarian-grand-prix"><span
+class="header-section-number">1.10</span> Rd11 Hungarian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd11-Hungarian-Grand-Prix-Practice-2.pdf">FP2:Plots
 PDF</a><br />
@@ -526,8 +541,8 @@ href="./2023/2023-Rd11-Hungarian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd11-Hungarian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.10" id="rd10-british-grand-prix"><span
-class="header-section-number">1.10</span> Rd10 British Grand Prix</h2>
+<h2 data-number="1.11" id="rd10-british-grand-prix"><span
+class="header-section-number">1.11</span> Rd10 British Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd10-British-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -570,8 +585,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd10-British-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.11" id="rd09-austrian-grand-prix"><span
-class="header-section-number">1.11</span> Rd09 Austrian Grand Prix</h2>
+<h2 data-number="1.12" id="rd09-austrian-grand-prix"><span
+class="header-section-number">1.12</span> Rd09 Austrian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd09-Austrian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -617,8 +632,8 @@ href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.12" id="rd08-canadian-grand-prix"><span
-class="header-section-number">1.12</span> Rd08 Canadian Grand Prix</h2>
+<h2 data-number="1.13" id="rd08-canadian-grand-prix"><span
+class="header-section-number">1.13</span> Rd08 Canadian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd08-Canadian-Grand-Prix-Practice-1_rcm.csv">FP1:Race
 Control Message CSV</a></p>
@@ -658,8 +673,8 @@ href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.13" id="rd07-spanish-grand-prix"><span
-class="header-section-number">1.13</span> Rd07 Spanish Grand Prix</h2>
+<h2 data-number="1.14" id="rd07-spanish-grand-prix"><span
+class="header-section-number">1.14</span> Rd07 Spanish Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd07-Spanish-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -702,8 +717,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd07-Spanish-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.14" id="rd06-monaco-grand-prix"><span
-class="header-section-number">1.14</span> Rd06 Monaco Grand Prix</h2>
+<h2 data-number="1.15" id="rd06-monaco-grand-prix"><span
+class="header-section-number">1.15</span> Rd06 Monaco Grand Prix</h2>
 <p><a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -740,8 +755,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd07-Monaco-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.15" id="rd05-miami-grand-prix"><span
-class="header-section-number">1.15</span> Rd05 Miami Grand Prix</h2>
+<h2 data-number="1.16" id="rd05-miami-grand-prix"><span
+class="header-section-number">1.16</span> Rd05 Miami Grand Prix</h2>
 <p><a href="./2023/2023-Rd05-Miami-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd05-Miami-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -778,8 +793,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd05-Miami-Grand-Prix-Race_rcm.csv">R: Race Control
 Message CSV</a></p>
-<h2 data-number="1.16" id="rd04-azerbaijan-grand-prix"><span
-class="header-section-number">1.16</span> Rd04 Azerbaijan Grand
+<h2 data-number="1.17" id="rd04-azerbaijan-grand-prix"><span
+class="header-section-number">1.17</span> Rd04 Azerbaijan Grand
 Prix</h2>
 <p><a
 href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Practice-1.pdf">FP1:Plots
@@ -820,8 +835,8 @@ href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.17" id="rd03-australian-grand-prix"><span
-class="header-section-number">1.17</span> Rd03 Australian Grand
+<h2 data-number="1.18" id="rd03-australian-grand-prix"><span
+class="header-section-number">1.18</span> Rd03 Australian Grand
 Prix</h2>
 <p><a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-1.pdf">FP1:Plots
@@ -869,8 +884,8 @@ CSV </a><br />
 <a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Race_race_control_message.csv">R:
 Race Control Message CSV</a></p>
-<h2 data-number="1.18" id="rd02-saudi-arabian-grand-prix"><span
-class="header-section-number">1.18</span> Rd02 Saudi Arabian Grand
+<h2 data-number="1.19" id="rd02-saudi-arabian-grand-prix"><span
+class="header-section-number">1.19</span> Rd02 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-1.pdf">FP1:Plots
@@ -916,8 +931,8 @@ CSV </a><br />
 <a
 href="./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Race_race_control_message.csv">R:
 Race Control Message CSV</a></p>
-<h2 data-number="1.19" id="rd01-bahrain-grand-prix"><span
-class="header-section-number">1.19</span> Rd01 Bahrain Grand Prix</h2>
+<h2 data-number="1.20" id="rd01-bahrain-grand-prix"><span
+class="header-section-number">1.20</span> Rd01 Bahrain Grand Prix</h2>
 <p><a
 href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -964,8 +979,8 @@ Laptime CSV</a></p>
 gaptime PDF</a><br />
 <a href="./2023/2023_Rd01_Bahrain-Grand-Prix_Race_gaptime.csv">R:
 gaptime CSV</a></p>
-<h2 data-number="1.20" id="pre-season-test-week1"><span
-class="header-section-number">1.20</span> Pre-Season Test Week1</h2>
+<h2 data-number="1.21" id="pre-season-test-week1"><span
+class="header-section-number">1.21</span> Pre-Season Test Week1</h2>
 <p><a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf">Day1
 PDF</a><br />
 <a
