--- a/index.html
+++ b/index.html
@@ -154,6 +154,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Qualifying_laptime.csv">QF:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint-Shootout.pdf">SS:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint-Shootout_rcm.csv">SS:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint-Shootout_laptime.csv">SS:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd19-mexico-city-grand-prix"><span
 class="header-section-number">1.2</span> Rd19 Mexico City Grand
 Prix</h2>
