Add 2023 Rd20 Sao Paulo GP S

--- a/index.html
+++ b/index.html
@@ -163,6 +163,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint-Shootout_laptime.csv">SS:All
 Laptime CSV</a></p>
+<p><a href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a
+href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd19-mexico-city-grand-prix"><span
 class="header-section-number">1.2</span> Rd19 Mexico City Grand
 Prix</h2>
