Add 2023 Rd21 Las Vegas GP FP2

--- a/index.html
+++ b/index.html
@@ -36,75 +36,78 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2023 season</a>
 <ul>
+<li><a href="#rd21-las-vegas-grand-prix"
+id="toc-rd21-las-vegas-grand-prix"><span
+class="toc-section-number">1.1</span> Rd21 Las Vegas Grand Prix</a></li>
 <li><a href="#rd20-sao-paulo-grand-prix"
 id="toc-rd20-sao-paulo-grand-prix"><span
-class="toc-section-number">1.1</span> Rd20 Sao Paulo Grand Prix</a></li>
+class="toc-section-number">1.2</span> Rd20 Sao Paulo Grand Prix</a></li>
 <li><a href="#rd19-mexico-city-grand-prix"
 id="toc-rd19-mexico-city-grand-prix"><span
-class="toc-section-number">1.2</span> Rd19 Mexico City Grand
+class="toc-section-number">1.3</span> Rd19 Mexico City Grand
 Prix</a></li>
 <li><a href="#rd18-united-states-grand-prix"
 id="toc-rd18-united-states-grand-prix"><span
-class="toc-section-number">1.3</span> Rd18 United States Grand
+class="toc-section-number">1.4</span> Rd18 United States Grand
 Prix</a></li>
 <li><a href="#rd17-qatar-grand-prix"
 id="toc-rd17-qatar-grand-prix"><span
-class="toc-section-number">1.4</span> Rd17 Qatar Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd17 Qatar Grand Prix</a></li>
 <li><a href="#rd16-japanese-grand-prix"
 id="toc-rd16-japanese-grand-prix"><span
-class="toc-section-number">1.5</span> Rd16 Japanese Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd16 Japanese Grand Prix</a></li>
 <li><a href="#rd15-singapore-grand-prix"
 id="toc-rd15-singapore-grand-prix"><span
-class="toc-section-number">1.6</span> Rd15 Singapore Grand Prix</a></li>
+class="toc-section-number">1.7</span> Rd15 Singapore Grand Prix</a></li>
 <li><a href="#rd14-italian-grand-prix"
 id="toc-rd14-italian-grand-prix"><span
-class="toc-section-number">1.7</span> Rd14 Italian Grand Prix</a></li>
+class="toc-section-number">1.8</span> Rd14 Italian Grand Prix</a></li>
 <li><a href="#rd13-dutch-grand-prix"
 id="toc-rd13-dutch-grand-prix"><span
-class="toc-section-number">1.8</span> Rd13 Dutch Grand Prix</a></li>
+class="toc-section-number">1.9</span> Rd13 Dutch Grand Prix</a></li>
 <li><a href="#rd12-belgian-grand-prix"
 id="toc-rd12-belgian-grand-prix"><span
-class="toc-section-number">1.9</span> Rd12 Belgian Grand Prix</a></li>
+class="toc-section-number">1.10</span> Rd12 Belgian Grand Prix</a></li>
 <li><a href="#rd11-hungarian-grand-prix"
 id="toc-rd11-hungarian-grand-prix"><span
-class="toc-section-number">1.10</span> Rd11 Hungarian Grand
+class="toc-section-number">1.11</span> Rd11 Hungarian Grand
 Prix</a></li>
 <li><a href="#rd10-british-grand-prix"
 id="toc-rd10-british-grand-prix"><span
-class="toc-section-number">1.11</span> Rd10 British Grand Prix</a></li>
+class="toc-section-number">1.12</span> Rd10 British Grand Prix</a></li>
 <li><a href="#rd09-austrian-grand-prix"
 id="toc-rd09-austrian-grand-prix"><span
-class="toc-section-number">1.12</span> Rd09 Austrian Grand Prix</a></li>
+class="toc-section-number">1.13</span> Rd09 Austrian Grand Prix</a></li>
 <li><a href="#rd08-canadian-grand-prix"
 id="toc-rd08-canadian-grand-prix"><span
-class="toc-section-number">1.13</span> Rd08 Canadian Grand Prix</a></li>
+class="toc-section-number">1.14</span> Rd08 Canadian Grand Prix</a></li>
 <li><a href="#rd07-spanish-grand-prix"
 id="toc-rd07-spanish-grand-prix"><span
-class="toc-section-number">1.14</span> Rd07 Spanish Grand Prix</a></li>
+class="toc-section-number">1.15</span> Rd07 Spanish Grand Prix</a></li>
 <li><a href="#rd06-monaco-grand-prix"
 id="toc-rd06-monaco-grand-prix"><span
-class="toc-section-number">1.15</span> Rd06 Monaco Grand Prix</a></li>
+class="toc-section-number">1.16</span> Rd06 Monaco Grand Prix</a></li>
 <li><a href="#rd05-miami-grand-prix"
 id="toc-rd05-miami-grand-prix"><span
-class="toc-section-number">1.16</span> Rd05 Miami Grand Prix</a></li>
+class="toc-section-number">1.17</span> Rd05 Miami Grand Prix</a></li>
 <li><a href="#rd04-azerbaijan-grand-prix"
 id="toc-rd04-azerbaijan-grand-prix"><span
-class="toc-section-number">1.17</span> Rd04 Azerbaijan Grand
+class="toc-section-number">1.18</span> Rd04 Azerbaijan Grand
 Prix</a></li>
 <li><a href="#rd03-australian-grand-prix"
 id="toc-rd03-australian-grand-prix"><span
-class="toc-section-number">1.18</span> Rd03 Australian Grand
+class="toc-section-number">1.19</span> Rd03 Australian Grand
 Prix</a></li>
 <li><a href="#rd02-saudi-arabian-grand-prix"
 id="toc-rd02-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.19</span> Rd02 Saudi Arabian Grand
+class="toc-section-number">1.20</span> Rd02 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd01-bahrain-grand-prix"
 id="toc-rd01-bahrain-grand-prix"><span
-class="toc-section-number">1.20</span> Rd01 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.21</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test-week1"
 id="toc-pre-season-test-week1"><span
-class="toc-section-number">1.21</span> Pre-Season Test Week1</a></li>
+class="toc-section-number">1.22</span> Pre-Season Test Week1</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2022 season</a>
@@ -134,8 +137,19 @@ class="toc-section-number">2.6</span> Rd17 Singapore Grand Prix</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2023 season</h1>
-<h2 data-number="1.1" id="rd20-sao-paulo-grand-prix"><span
-class="header-section-number">1.1</span> Rd20 Sao Paulo Grand Prix</h2>
+<h2 data-number="1.1" id="rd21-las-vegas-grand-prix"><span
+class="header-section-number">1.1</span> Rd21 Las Vegas Grand Prix</h2>
+<p><a
+href="./2023/2023-Rd21-Las-Vegas-Grand-Prix-Practice-2.pdf">FP2:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd21-Las-Vegas-Grand-Prix-Practice-2_rcm.csv">FP2:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd21-Las-Vegas-Grand-Prix-Practice-2_laptime.csv">FP2:All
+Laptime CSV</a></p>
+<h2 data-number="1.2" id="rd20-sao-paulo-grand-prix"><span
+class="header-section-number">1.2</span> Rd20 Sao Paulo Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -181,8 +195,8 @@ href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.2" id="rd19-mexico-city-grand-prix"><span
-class="header-section-number">1.2</span> Rd19 Mexico City Grand
+<h2 data-number="1.3" id="rd19-mexico-city-grand-prix"><span
+class="header-section-number">1.3</span> Rd19 Mexico City Grand
 Prix</h2>
 <p><a
 href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-1.pdf">FP1:Plots
@@ -232,8 +246,8 @@ href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.3" id="rd18-united-states-grand-prix"><span
-class="header-section-number">1.3</span> Rd18 United States Grand
+<h2 data-number="1.4" id="rd18-united-states-grand-prix"><span
+class="header-section-number">1.4</span> Rd18 United States Grand
 Prix</h2>
 <p><a
 href="./2023/2023-Rd18-United-States-Grand-Prix-Practice-1.pdf">FP1:Plots
@@ -287,8 +301,8 @@ href="./2023/2023-Rd18-United-States-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd18-United-States-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.4" id="rd17-qatar-grand-prix"><span
-class="header-section-number">1.4</span> Rd17 Qatar Grand Prix</h2>
+<h2 data-number="1.5" id="rd17-qatar-grand-prix"><span
+class="header-section-number">1.5</span> Rd17 Qatar Grand Prix</h2>
 <p><a href="./2023/2023-Rd17-Qatar-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd17-Qatar-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -319,8 +333,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd17-Qatar-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.5" id="rd16-japanese-grand-prix"><span
-class="header-section-number">1.5</span> Rd16 Japanese Grand Prix</h2>
+<h2 data-number="1.6" id="rd16-japanese-grand-prix"><span
+class="header-section-number">1.6</span> Rd16 Japanese Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd16-Japanese-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -366,8 +380,8 @@ href="./2023/2023-Rd16-Japanese-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd16-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.6" id="rd15-singapore-grand-prix"><span
-class="header-section-number">1.6</span> Rd15 Singapore Grand Prix</h2>
+<h2 data-number="1.7" id="rd15-singapore-grand-prix"><span
+class="header-section-number">1.7</span> Rd15 Singapore Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd15-Singapore-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -413,8 +427,8 @@ href="./2023/2023-Rd15-Singapore-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd15-Singapore-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.7" id="rd14-italian-grand-prix"><span
-class="header-section-number">1.7</span> Rd14 Italian Grand Prix</h2>
+<h2 data-number="1.8" id="rd14-italian-grand-prix"><span
+class="header-section-number">1.8</span> Rd14 Italian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd14-Italian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -457,8 +471,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd14-Italian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.8" id="rd13-dutch-grand-prix"><span
-class="header-section-number">1.8</span> Rd13 Dutch Grand Prix</h2>
+<h2 data-number="1.9" id="rd13-dutch-grand-prix"><span
+class="header-section-number">1.9</span> Rd13 Dutch Grand Prix</h2>
 <p><a href="./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -495,8 +509,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd13-Dutch-Grand-Prix-Race_rcm.csv">R: Race Control
 Message CSV</a></p>
-<h2 data-number="1.9" id="rd12-belgian-grand-prix"><span
-class="header-section-number">1.9</span> Rd12 Belgian Grand Prix</h2>
+<h2 data-number="1.10" id="rd12-belgian-grand-prix"><span
+class="header-section-number">1.10</span> Rd12 Belgian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd12-Belgian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -539,8 +553,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd12-Belgian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.10" id="rd11-hungarian-grand-prix"><span
-class="header-section-number">1.10</span> Rd11 Hungarian Grand Prix</h2>
+<h2 data-number="1.11" id="rd11-hungarian-grand-prix"><span
+class="header-section-number">1.11</span> Rd11 Hungarian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd11-Hungarian-Grand-Prix-Practice-2.pdf">FP2:Plots
 PDF</a><br />
@@ -577,8 +591,8 @@ href="./2023/2023-Rd11-Hungarian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd11-Hungarian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.11" id="rd10-british-grand-prix"><span
-class="header-section-number">1.11</span> Rd10 British Grand Prix</h2>
+<h2 data-number="1.12" id="rd10-british-grand-prix"><span
+class="header-section-number">1.12</span> Rd10 British Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd10-British-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -621,8 +635,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd10-British-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.12" id="rd09-austrian-grand-prix"><span
-class="header-section-number">1.12</span> Rd09 Austrian Grand Prix</h2>
+<h2 data-number="1.13" id="rd09-austrian-grand-prix"><span
+class="header-section-number">1.13</span> Rd09 Austrian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd09-Austrian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -668,8 +682,8 @@ href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.13" id="rd08-canadian-grand-prix"><span
-class="header-section-number">1.13</span> Rd08 Canadian Grand Prix</h2>
+<h2 data-number="1.14" id="rd08-canadian-grand-prix"><span
+class="header-section-number">1.14</span> Rd08 Canadian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd08-Canadian-Grand-Prix-Practice-1_rcm.csv">FP1:Race
 Control Message CSV</a></p>
@@ -709,8 +723,8 @@ href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.14" id="rd07-spanish-grand-prix"><span
-class="header-section-number">1.14</span> Rd07 Spanish Grand Prix</h2>
+<h2 data-number="1.15" id="rd07-spanish-grand-prix"><span
+class="header-section-number">1.15</span> Rd07 Spanish Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd07-Spanish-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -753,8 +767,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd07-Spanish-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.15" id="rd06-monaco-grand-prix"><span
-class="header-section-number">1.15</span> Rd06 Monaco Grand Prix</h2>
+<h2 data-number="1.16" id="rd06-monaco-grand-prix"><span
+class="header-section-number">1.16</span> Rd06 Monaco Grand Prix</h2>
 <p><a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -791,8 +805,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd07-Monaco-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.16" id="rd05-miami-grand-prix"><span
-class="header-section-number">1.16</span> Rd05 Miami Grand Prix</h2>
+<h2 data-number="1.17" id="rd05-miami-grand-prix"><span
+class="header-section-number">1.17</span> Rd05 Miami Grand Prix</h2>
 <p><a href="./2023/2023-Rd05-Miami-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd05-Miami-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -829,8 +843,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd05-Miami-Grand-Prix-Race_rcm.csv">R: Race Control
 Message CSV</a></p>
-<h2 data-number="1.17" id="rd04-azerbaijan-grand-prix"><span
-class="header-section-number">1.17</span> Rd04 Azerbaijan Grand
+<h2 data-number="1.18" id="rd04-azerbaijan-grand-prix"><span
+class="header-section-number">1.18</span> Rd04 Azerbaijan Grand
 Prix</h2>
 <p><a
 href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Practice-1.pdf">FP1:Plots
@@ -871,8 +885,8 @@ href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.18" id="rd03-australian-grand-prix"><span
-class="header-section-number">1.18</span> Rd03 Australian Grand
+<h2 data-number="1.19" id="rd03-australian-grand-prix"><span
+class="header-section-number">1.19</span> Rd03 Australian Grand
 Prix</h2>
 <p><a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-1.pdf">FP1:Plots
@@ -920,8 +934,8 @@ CSV </a><br />
 <a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Race_race_control_message.csv">R:
 Race Control Message CSV</a></p>
-<h2 data-number="1.19" id="rd02-saudi-arabian-grand-prix"><span
-class="header-section-number">1.19</span> Rd02 Saudi Arabian Grand
+<h2 data-number="1.20" id="rd02-saudi-arabian-grand-prix"><span
+class="header-section-number">1.20</span> Rd02 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-1.pdf">FP1:Plots
@@ -967,8 +981,8 @@ CSV </a><br />
 <a
 href="./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Race_race_control_message.csv">R:
 Race Control Message CSV</a></p>
-<h2 data-number="1.20" id="rd01-bahrain-grand-prix"><span
-class="header-section-number">1.20</span> Rd01 Bahrain Grand Prix</h2>
+<h2 data-number="1.21" id="rd01-bahrain-grand-prix"><span
+class="header-section-number">1.21</span> Rd01 Bahrain Grand Prix</h2>
 <p><a
 href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -1015,8 +1029,8 @@ Laptime CSV</a></p>
 gaptime PDF</a><br />
 <a href="./2023/2023_Rd01_Bahrain-Grand-Prix_Race_gaptime.csv">R:
 gaptime CSV</a></p>
-<h2 data-number="1.21" id="pre-season-test-week1"><span
-class="header-section-number">1.21</span> Pre-Season Test Week1</h2>
+<h2 data-number="1.22" id="pre-season-test-week1"><span
+class="header-section-number">1.22</span> Pre-Season Test Week1</h2>
 <p><a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf">Day1
 PDF</a><br />
 <a
