--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-1_laptime.csv">FP1:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-2.pdf">FP2:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-2_rcm.csv">FP2:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-2_laptime.csv">FP2:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd21-las-vegas-grand-prix"><span
 class="header-section-number">1.2</span> Rd21 Las Vegas Grand Prix</h2>
 <p><a
