--- a/index.html
+++ b/index.html
@@ -160,6 +160,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-2_laptime.csv">FP2:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-3.pdf">FP3:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-3_rcm.csv">FP3:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-3_laptime.csv">FP3:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd21-las-vegas-grand-prix"><span
 class="header-section-number">1.2</span> Rd21 Las Vegas Grand Prix</h2>
 <p><a
