Add 2024 Rd01 Abu Dhabi GP FP1

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2024 season</a>
 <ul>
+<li><a href="#rd01-bahrain-grand-prix"
+id="toc-rd01-bahrain-grand-prix"><span
+class="toc-section-number">1.1</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.1</span> Pre-season test</a></li>
+class="toc-section-number">1.2</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2023 season</a>
@@ -108,8 +111,8 @@ Prix</a></li>
 id="toc-rd02-saudi-arabian-grand-prix"><span
 class="toc-section-number">2.21</span> Rd02 Saudi Arabian Grand
 Prix</a></li>
-<li><a href="#rd01-bahrain-grand-prix"
-id="toc-rd01-bahrain-grand-prix"><span
+<li><a href="#rd01-bahrain-grand-prix-1"
+id="toc-rd01-bahrain-grand-prix-1"><span
 class="toc-section-number">2.22</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test-week1"
 id="toc-pre-season-test-week1"><span
@@ -143,8 +146,17 @@ class="toc-section-number">3.6</span> Rd17 Singapore Grand Prix</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2024 season</h1>
-<h2 data-number="1.1" id="pre-season-test"><span
-class="header-section-number">1.1</span> Pre-season test</h2>
+<h2 data-number="1.1" id="rd01-bahrain-grand-prix"><span
+class="header-section-number">1.1</span> Rd01 Bahrain Grand Prix</h2>
+<p><a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1_rcm.csv">Day1:
+race FP1 message csv</a></p>
+<h2 data-number="1.2" id="pre-season-test"><span
+class="header-section-number">1.2</span> Pre-season test</h2>
 <p><a href="./2024/2024-Pre-Season-Testing-1-1.pdf">Day1: Plot
 PDF</a><br />
 <a href="./2024/2024-Pre-Season-Testing-1-1_laptime.csv">Day1: laptime
@@ -1074,7 +1086,7 @@ CSV </a><br />
 <a
 href="./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Race_race_control_message.csv">R:
 Race Control Message CSV</a></p>
-<h2 data-number="2.22" id="rd01-bahrain-grand-prix"><span
+<h2 data-number="2.22" id="rd01-bahrain-grand-prix-1"><span
 class="header-section-number">2.22</span> Rd01 Bahrain Grand Prix</h2>
 <p><a
 href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-1.pdf">FP1:Plots
